Make user preferences persist between app start. Fixed ACPU/BCPU tables Align to center table's content

--- a/src/components/style/DesignParametesTable.css
+++ b/src/components/style/DesignParametesTable.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     column-gap: 10px;
     padding: 10px;
+    width: 100%;
 }
 
 .param-element-container input,
